# daily_poll

./: CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  docker-compose.yml  fsync.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  deploy.yml  test.yml
docker/: dev.Dockerfile  prod.Dockerfile
migrations/2021-08-05-035835_polls/: down.sql  up.sql
src/: airtable.rs  db.rs  dinopoll.rs  main.rs  schema.rs  slack.rs
