[package]
name = "daily_poll"
version = "0.1.0"
authors = ["Matthew Gleich <email@mattglei.ch>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
anyhow = "1.0.40"
tracing = "0.1"
tracing-subscriber = "0.2"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
diesel = { version = "1.4.4", features = ["mysql"] }
